--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!-- DNS prefetch for API calls -->
-    <link rel="dns-prefetch" href="//localhost:5000" />
+    <link rel="dns-prefetch" href="//agri-backend-ecci.onrender.com" />
+    <link rel="dns-prefetch" href="//agri-payments-backend-aivg.onrender.com" />
 
     <title>PayChain - Blockchain Payment App</title>
 
