feat(cors+stability): allow Vercel origins (regex *.vercel.app) and env allowlists; add preflight handling; increase server timeouts; remove unused preload\n\n- payments: robust CORS with regex + app.options preflight\n- agri: robust CORS with regex + app.options preflight\n- both: set keepAliveTimeout and headersTimeout to 120s to reduce 502/503\n- frontend: removed manual preload of /src/main.tsx (Vite handles modulepreload)

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 
     <title>PayChain - Blockchain Payment App</title>
 
-    <!-- Preload critical resources -->
-    <link rel="preload" href="/src/main.tsx" as="script" crossorigin="anonymous"/>
+    <!-- Preload removed; Vite injects modulepreload for built assets automatically -->
   </head>
   <body>
     <div id="root"></div>
