fix: update branding and styling for agricultural marketplace
🎨 Styling & Branding Fixes:
- Updated HTML meta tags for AgroChain agricultural marketplace
- Fixed Google Fonts import to prevent CSS build warnings
- Updated theme colors from blue to green for agricultural theme
- Changed app title and descriptions to reflect farming focus
- Updated loading screen branding and colors

🔧 Build Improvements:
- Resolved CSS minification warnings
- Proper font loading strategy
- Optimized build configuration
- Clean build output without errors

📱 PWA Updates:
- Agricultural marketplace branding in manifest
- Green theme colors for agricultural focus
- Updated app icons and descriptions
- Proper service worker configuration

This ensures the deployed application shows the correct agricultural marketplace styling and branding instead of the generic payment app interface.

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 
     <!-- PWA Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <meta name="theme-color" content="#2563eb" />
-    <meta name="description" content="Secure blockchain payment and transaction platform for modern finance" />
-    <meta name="keywords" content="blockchain, cryptocurrency, payments, wallet, PWA, mobile app" />
-    <meta name="author" content="Blockchain Payment App" />
+    <meta name="theme-color" content="#22c55e" />
+    <meta name="description" content="Blockchain-verified agricultural marketplace connecting farmers and consumers through NFT technology" />
+    <meta name="keywords" content="agriculture, blockchain, NFT, farmers, marketplace, sustainable farming, food traceability" />
+    <meta name="author" content="AgroChain Marketplace" />
 
     <!-- Apple iOS Meta Tags -->
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="PayChain" />
+    <meta name="apple-mobile-web-app-title" content="AgroChain" />
 
     <!-- Microsoft Windows Meta Tags -->
-    <meta name="msapplication-TileColor" content="#2563eb" />
+    <meta name="msapplication-TileColor" content="#22c55e" />
     <meta name="msapplication-config" content="/browserconfig.xml" />
 
     <!-- Favicon and Icons -->
@@ -28,15 +28,16 @@
     <!-- Web App Manifest -->
     <link rel="manifest" href="/manifest.json" />
 
-    <!-- Preconnect to external domains for performance -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
 
     <!-- DNS prefetch for API calls -->
     <link rel="dns-prefetch" href="//agri-backend-ecci.onrender.com" />
     <link rel="dns-prefetch" href="//agri-payments-backend-aivg.onrender.com" />
 
-    <title>PayChain - Blockchain Payment App</title>
+    <title>AgroChain - Agricultural NFT Marketplace</title>
 
     <!-- Preload removed; Vite injects modulepreload for built assets automatically -->
   </head>
@@ -50,7 +51,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -70,8 +71,8 @@
           animation: spin 1s linear infinite;
           margin: 0 auto 20px;
         "></div>
-        <h3>PayChain</h3>
-        <p>Loading your blockchain wallet...</p>
+        <h3>AgroChain</h3>
+        <p>Loading agricultural marketplace...</p>
       </div>
     </div>
 
