Fix production deployment styling issues
- Move Tailwind CSS and PostCSS from devDependencies to dependencies
- Add Google Fonts Inter import to index.html
- Update branding from PayChain to Farm to Fork NFT Marketplace
- Ensure all CSS dependencies are available in production build

--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    
     <!-- DNS prefetch for API calls -->
     <link rel="dns-prefetch" href="//agri-backend-ecci.onrender.com" />
     <link rel="dns-prefetch" href="//agri-payments-backend-aivg.onrender.com" />
 
-    <title>PayChain - Blockchain Payment App</title>
+    <title>Farm to Fork NFT Marketplace</title>
 
     <!-- Preload removed; Vite injects modulepreload for built assets automatically -->
   </head>
@@ -70,8 +73,8 @@
           animation: spin 1s linear infinite;
           margin: 0 auto 20px;
         "></div>
-        <h3>PayChain</h3>
-        <p>Loading your blockchain wallet...</p>
+        <h3>Farm to Fork</h3>
+        <p>Loading your agricultural marketplace...</p>
       </div>
     </div>
 
